// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketHeader /> should render existing ticket 1`] = `
<div
  class="component"
  id="TicketHeader"
>
  <div
    class="title"
  >
    <div
      class="wrapper editableTitleWrapper component"
    >
      <input
        class="input editableTitle input"
        id="input-text-3"
        maxlength="998"
        name="input-text-3"
        placeholder="Subject"
        tabindex="1"
        type="text"
        value="Great ticket"
      />
    </div>
    <div
      class="actions"
    >
      <div
        class="arrowPaginationWrapper"
      >
        <ul
          class="container"
        >
          <li
            aria-label="previous"
            class="item paginationItemWrapper arrow"
            id="pagination-item-arrow-previous"
          >
            <i
              class="material-icons md-2"
            >
              keyboard_arrow_left
            </i>
          </li>
          <li
            aria-label="next"
            class="item paginationItemWrapper arrow"
            id="pagination-item-arrow-next"
          >
            <i
              class="material-icons md-2"
            >
              keyboard_arrow_right
            </i>
          </li>
        </ul>
      </div>
      <div>
        Snooze
      </div>
      <button
        aria-disabled="false"
        class="wrapper button ghost secondary small"
        id="ticket-actions-button"
        type="button"
      >
        <span
          class="content"
        >
          <i
            class="icon material-icons"
          >
            more_vert
          </i>
        </span>
      </button>
    </div>
  </div>
  <div
    class="secondRow"
  >
    <div
      class="statusAndTags"
    >
      <span
        id="change-status-button"
      >
        <button
          aria-disabled="false"
          class="wrapper fill secondary small"
          type="button"
        >
          <i
            aria-hidden="true"
            class="material-icons icon small"
          >
            check
          </i>
          <span
            class="content"
          >
            Close
          </span>
        </button>
      </span>
      TicketTagsMock
    </div>
    <div>
      TicketAssigneeMock
    </div>
  </div>
</div>
`;

exports[`<TicketHeader /> should render new ticket 1`] = `
<div
  class="component"
  id="TicketHeader"
>
  <div
    class="title"
  >
    <div
      class="wrapper isFocused editableTitleWrapper component"
    >
      <input
        class="input editableTitle input"
        id="input-text-1"
        maxlength="998"
        name="input-text-1"
        placeholder="Subject"
        tabindex="1"
        type="text"
        value="Great ticket"
      />
    </div>
    <div
      class="actions"
    />
  </div>
  <div
    class="secondRow"
  >
    <div
      class="statusAndTags"
    >
      TicketTagsMock
    </div>
    <div>
      TicketAssigneeMock
    </div>
  </div>
</div>
`;

exports[`<TicketHeader /> should render spam ticket 1`] = `
<div
  class="component"
  id="TicketHeader"
>
  <div
    class="title"
  >
    <div
      class="wrapper editableTitleWrapper component"
    >
      <input
        class="input editableTitle input"
        id="input-text-6"
        maxlength="998"
        name="input-text-6"
        placeholder="Subject"
        tabindex="1"
        type="text"
        value="Great ticket"
      />
    </div>
    <div
      class="actions"
    >
      <div
        class="headerIcon"
      >
        <i
          class="icon material-icons text-danger"
          id="ticket-header-spam-icon"
        >
          flag
        </i>
      </div>
      <div>
        Snooze
      </div>
      <button
        aria-disabled="false"
        class="wrapper button ghost secondary small"
        id="ticket-actions-button"
        type="button"
      >
        <span
          class="content"
        >
          <i
            class="icon material-icons"
          >
            more_vert
          </i>
        </span>
      </button>
    </div>
  </div>
  <div
    class="secondRow"
  >
    <div
      class="statusAndTags"
    >
      <span
        id="change-status-button"
      >
        <button
          aria-disabled="false"
          class="wrapper fill secondary small"
          type="button"
        >
          <i
            aria-hidden="true"
            class="material-icons icon small"
          >
            check
          </i>
          <span
            class="content"
          >
            Close
          </span>
        </button>
      </span>
      TicketTagsMock
    </div>
    <div>
      TicketAssigneeMock
    </div>
  </div>
</div>
`;

exports[`<TicketHeader /> should render trashed ticket 1`] = `
<div
  class="component"
  id="TicketHeader"
>
  <div
    class="title"
  >
    <div
      class="wrapper editableTitleWrapper component"
    >
      <input
        class="input editableTitle input"
        id="input-text-9"
        maxlength="998"
        name="input-text-9"
        placeholder="Subject"
        tabindex="1"
        type="text"
        value="Great ticket"
      />
    </div>
    <div
      class="actions"
    >
      <div
        class="headerIcon"
      >
        <i
          class="icon material-icons text-danger"
          id="ticket-header-trash-icon"
        >
          delete
        </i>
      </div>
      <div>
        Snooze
      </div>
      <button
        aria-disabled="false"
        class="wrapper button ghost secondary small"
        id="ticket-actions-button"
        type="button"
      >
        <span
          class="content"
        >
          <i
            class="icon material-icons"
          >
            more_vert
          </i>
        </span>
      </button>
    </div>
  </div>
  <div
    class="secondRow"
  >
    <div
      class="statusAndTags"
    >
      <span
        id="change-status-button"
      >
        <button
          aria-disabled="false"
          class="wrapper fill secondary small"
          type="button"
        >
          <i
            aria-hidden="true"
            class="material-icons icon small"
          >
            check
          </i>
          <span
            class="content"
          >
            Close
          </span>
        </button>
      </span>
      TicketTagsMock
    </div>
    <div>
      TicketAssigneeMock
    </div>
  </div>
</div>
`;
